# autogpt-web-builder-gippity-rust

gippity/: .gitignore  Cargo.toml
gippity/src/: main.rs
gippity/src/ai_functions/: aifunc_architect.rs  aifunc_frontend.rs  backend_developer.rs  database_architect.rs  frontend_developer.rs  managing_agent.rs  mod.rs  solution_architect.rs  url_manager.rs
gippity/src/apis/: call_request.rs
gippity/src/helpers/: command_line.rs  general.rs  mod.rs
gippity/src/models/: mod.rs
gippity/src/models/agent_basic/: basic_agent.rs  basic_traits.rs
gippity/src/models/agents/: agent_architect.rs  agent_backend.rs  agent_frontend.rs  agent_frontend_comp.rs  agent_traits.rs  backend_developer.rs  database_architect.rs  frontend_developer.rs  mod.rs  solution_architect.rs  url_manager.rs
gippity/src/models/agents_manager/: managing_agent.rs
gippity/src/models/general/: llm.rs
gippity/src/template/: buildsheet.txt  factsheet.txt
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
website/backend/: .gitignore  Cargo.toml  api_endpoints.json  database.json
website/backend/src/: codetemplate.rs  main.rs
website/frontend/: package.json
website/frontend/src/: App.tsx
website/frontend/src/components/logo/: Logo.tsx
website/frontend/src/components/shared/: Footer.tsx  Logo.tsx  Navigation.tsx
