[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
crossterm = "0.26.1"
async-trait = "0.1.68"
webbrowser = "0.8.9"
actix-web = "4.3.1"
uuid = { version = "1.3.2", features = ["v4"] }
actix-cors = "0.6.4"
